--- a/HTML-Day-02/Practice-portfolio.html
+++ b/HTML-Day-02/Practice-portfolio.html
@@ -3,9 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>portfolio</title>
 </head>
 <body>
+    <h1>Welcome To portfolio page </h1>
+    <img src="PPP Prince patel 12414804921 EEE MAIT 6201236289.jpg" alt="prince patel" height="150" width="150">
+    <h1>Prince patel</h1>
+    <p><b>Hello, i am prince welcome to my first web page</b></p>
+    <h3>Education</h3>
+    <ul>
+        <li><b>10th class (CBSE):</b>75%</li>
+        <li><b>12th class (CBSE):</b>75%</li>
+        <li><b>Bachalor in Engineering (EEE):</b>75%</li>
+    </ul>
+    <h3>Skills</h3>
+    <ul>
+        <li>HTML,CSS,Javascript</li>
+        <li>java</li>
+        <li>DSA</li>
+    </ul>
+    <h3>Hobbies</h3>
+    <ul>
+        <li>reading</li>
+        <li>play online game</li>
+    </ul>
+    <h3>contacts</h3>
+    <ul>
+        <li><b>Gmail:</b>patelprince0555@gmail.com</li>
+    </ul>
+    <p>made with prince</p>
+
     
 </body>
 </html>
