--- a/HTML-Day-04/Table.html
+++ b/HTML-Day-04/Table.html
@@ -8,10 +8,13 @@
 <body>
     <table border="black">
         <caption>food menu</caption>
+        <thead>
         <tr>
             <th>item</th>
             <th>price</th>
         </tr>
+    </thead>
+    <tbody>
         <tr>
             <td>frooti</td>
             <td>10</td>
@@ -24,6 +27,7 @@
             <td>chips</td>
             <td>20</td>
         </tr>
+    </tbody>
     </table>
 </body>
 </html>
