--- a/CSS-Day-05/index.html
+++ b/CSS-Day-05/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 style="color: blue;">Hello world</h1>
-    <p style="color: red;">this is the first chapter of CSS</p>
+    <h1 >Hello world</h1>
+    <p>this is the first chapter of CSS</p>
 </body>
 </html> 
