--- a/07-CSS-Day-07/practice-question2.html
+++ b/07-CSS-Day-07/practice-question2.html
@@ -11,5 +11,20 @@
     <div class="box"></div>
 <div class="box"></div>
 <div class="box"></div>
+
+<h1>Technologies</h1>
+<ul>
+<li>HTML</li>
+<li>CSS</li>
+<li>JavaScript</li>
+<li>NodeJS</li>
+<li>SQL</li>
+<li>MongoDB</li>
+<li>ReactJS</li>
+<li>Java</li>
+<li>C++</li>
+<li>C</li>
+<li>Python</li>
+</ul>
 </body>
 </html>
