--- a/08-CSS-Day-08/index.html
+++ b/08-CSS-Day-08/index.html
@@ -8,5 +8,9 @@
 </head>
 <body>
     <div></div>
+    <div id="opacity">
+        <h1>heading</h1>
+        <button>click me</button>
+    </div>
 </body>
 </html>
