--- a/08-CSS-Day-08/card-hover.html
+++ b/08-CSS-Day-08/card-hover.html
@@ -4,8 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style2.css"
 </head>
 <body>
+    <div class="card">
+        <img src="images.png" alt="man">
+        <div class="desc">
+            <h3>prince patel</h3>
+            <p>web developer</p>
+        </div> 
+    </div>
+    <div class="card">
+        <img src="download.png" alt="women">
+        <div class="desc">
+            <h3>Ritika suman</h3>
+            <p>web developer</p>
+        </div> 
+    </div>
     
 </body>
 </html>
