--- a/08-CSS-Day-08/smiley-face.html
+++ b/08-CSS-Day-08/smiley-face.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style3.css">
 </head>
 <body>
+    <div class="face">
+        <div class="mouth"></div>
+        <div class="eye">
+            <div class="lefteye"></div>
+            <div class="righteye"></div>
+        </div>
+    </div>
     
 </body>
 </html>
