--- a/09-CSS-Day-09/practice-question-part-05.html
+++ b/09-CSS-Day-09/practice-question-part-05.html
@@ -7,6 +7,16 @@
     <link rel="stylesheet" href="style1.css">
 </head>
 <body>
-    
+    <div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+    </div>
 </body>
 </html>
