--- a/09-CSS-Day-09/practice-question-part-05-o2.html
+++ b/09-CSS-Day-09/practice-question-part-05-o2.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="style2.css">
 </head>
 <body>
+    <div id="container">
+        <div class="option">logo</div>
+        <div class="option">Home</div>
+        <div class="option">about</div>
+        <div class="option">contact</div>
+    </div>
     
 </body>
 </html>
