--- a/10-CSS-Day-10/index-grid.html
+++ b/10-CSS-Day-10/index-grid.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1>Grid playground</h1>
+    <div id="container">
+        <div class="item">1</div>
+        <div class="item">2</div>
+        <div class="item">3</div>
+        <div class="item">4</div>
+        <div class="item">5</div>
+    </div>
     
 </body>
 </html>
