--- a/10-CSS-Day-10/practice-question-part-06.html
+++ b/10-CSS-Day-10/practice-question-part-06.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" href="style4.css">
 </head>
 <body>
+    <div class="container">
+        <div class="header">header(1row,12column)</div>
+        <div class="sidebar">sidebar(10row,3column)</div>
+        <div class="navigation">navigation(1row,6column)</div>
+        <div class="main">main(9row,6column)</div>
+        <div class="ads">ads(10row,3column)</div>
+        <div class="footer">footer(1row,12column)</div>
+    </div>
     
 </body>
 </html>
