--- a/11-CSS-Day-11/CSS-project.html
+++ b/11-CSS-Day-11/CSS-project.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital@0;1&family=Roboto&display=swap" rel="stylesheet">
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
       rel="stylesheet"
@@ -21,7 +22,7 @@
     <div class="main_box">
       <input type="checkbox" id="check" />
       <div class="btn_one">
-        <label for="check" style="color: white">
+        <label for="check">
           <i class="fa-solid fa-bars"></i>
         </label>
       </div>
