--- a/12-CSS-Day-12/index.html
+++ b/12-CSS-Day-12/index.html
@@ -8,6 +8,8 @@
     <link href="style.css" rel="stylesheet">
 </head>
 <body>
-    
+    <button>click me</button>
+    <button class=" btn btn-danger">click me</button>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
