--- a/12-CSS-Day-12/index.html
+++ b/12-CSS-Day-12/index.html
@@ -10,6 +10,14 @@
 <body>
     <button>click me</button>
     <button class=" btn btn-danger">click me</button>
+    <div class="container">
+        <h1>Bootstrap Demo</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi inventore nesciunt, voluptate, officiis esse ducimus reprehenderit vero, quo numquam minus molestias enim neque consectetur maiores delectus iure. Omnis, iste ea?
+        Recusandae molestiae minus reprehenderit nostrum sint inventore sequi laboriosam voluptatem nemo? Consequatur nulla autem blanditiis temporibus similique nostrum vel neque debitis saepe! Recusandae quo ab at odio aperiam autem molestias.
+        Ab quam quae autem vel? Quae animi atque, veritatis ducimus asperiores officiis accusantium consectetur obcaecati! Ea dignissimos, corrupti tempora suscipit voluptates obcaecati mollitia, officiis minima voluptas quos maiores, provident reiciendis?
+        Reiciendis sed impedit velit non voluptatibus fuga saepe amet doloribus eaque ex, ullam repellat nostrum modi esse obcaecati libero accusantium asperiores dicta perspiciatis nulla dolores autem cum. Illum, deserunt voluptatibus!
+        Quod beatae odio quam necessitatibus architecto laboriosam rerum corrupti eius dicta magnam neque asperiores atque numquam repellat iusto, voluptatum, non libero, cum fugit provident. Vero odio architecto dignissimos totam rerum?</p>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
