--- a/12-CSS-Day-12/index.html
+++ b/12-CSS-Day-12/index.html
@@ -15,6 +15,9 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi inventore nesciunt, voluptate,
         officiis esse ducimus reprehenderit vero, quo numquam minus molestias enim neque consectetur maiores delectus iure. Omnis, iste ea?
         Recusandae molestiae minus reprehenderit nostrum sint inventore sequi laboriosam voluptatem nemo? </p>
+
+        <button type="button" class="btn">Base class</button>
+
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
