--- a/12-CSS-Day-12/index.html
+++ b/12-CSS-Day-12/index.html
@@ -17,6 +17,14 @@
         Recusandae molestiae minus reprehenderit nostrum sint inventore sequi laboriosam voluptatem nemo? </p>
 
         <button type="button" class="btn">Base class</button>
+        <button type="button" class="btn btn-outline-primary btn-lg">Primary</button>
+        <button type="button" class="btn btn-secondary btn-sm">Secondary</button>
+        <button type="button" class="btn btn-success">Success</button>
+        <button type="button" class="btn btn-danger">Danger</button>
+        <button type="button" class="btn btn-warning">Warning</button>
+        <button type="button" class="btn btn-info">Info</button>
+        <button type="button" class="btn btn-light">Light</button>
+        <button type="button" class="btn btn-dark">Dark</button>
 
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
