--- a/12-CSS-Day-12/index.html
+++ b/12-CSS-Day-12/index.html
@@ -26,6 +26,9 @@
         <button type="button" class="btn btn-light">Light</button>
         <button type="button" class="btn btn-dark">Dark</button>
 
+        <br>
+        <span class="badge bg-secondary">10+</span>
+
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
