--- a/12-CSS-Day-12/index.html
+++ b/12-CSS-Day-12/index.html
@@ -28,6 +28,12 @@
 
         <br>
         <span class="badge bg-secondary">10+</span>
+        <br>
+        <h1>notifications <span class="badge text-bg-secondary">New</span></h1>
+        <br>
+        <button type="button" class="btn btn-primary">
+            Notifications <span class="badge text-bg-danger">4+</span>
+          </button>
 
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
