--- a/12-CSS-Day-12/index.html
+++ b/12-CSS-Day-12/index.html
@@ -35,6 +35,17 @@
             Notifications <span class="badge text-bg-danger">4+</span>
           </button>
 
+          <br>
+          <br>
+          <button type="button" class="btn btn-primary position-relative">
+            Profile
+            <span class="position-absolute top-0 start-100 translate-middle p-2 bg-danger border border-light rounded-circle">
+                99
+              <span class="visually-hidden">5</span>
+            </span>
+          </button>
+          
+
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
