--- a/12-CSS-Day-12/grid.html
+++ b/12-CSS-Day-12/grid.html
@@ -12,7 +12,7 @@
         <h2>Grid System</h2>
         <div class="row">
             <div class="col bg-danger">One</div>
-            <div class="col bg-succes">Two</div>
+            <div class="col bg-success">Two</div>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
