--- a/12-CSS-Day-12/form-bootstrap.html
+++ b/12-CSS-Day-12/form-bootstrap.html
@@ -8,7 +8,13 @@
     <link href="style3.css" rel="stylesheet">
 </head>
 <body>
-    <div class="container"></div>
+    <div class="container">
+        <h2>Form demo</h2>
+        <form class="mb-3">
+            <label class="form-label" for="email">Email</label>
+            <input type="text" placeholder="Email" class="form-control" id="email"/>
+        </form>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
