--- a/12-CSS-Day-12/Bootstrap-Practice-question.html
+++ b/12-CSS-Day-12/Bootstrap-Practice-question.html
@@ -8,7 +8,8 @@
     <link href="style4.css" rel="stylesheet">
 </head>
 <body>
-    
+    <h1 class="text-center">Princing</h1>
+    <p class="text-center">please checkout our most effective payment models</p>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
