--- a/12-CSS-Day-12/Bootstrap-Practice-question.html
+++ b/12-CSS-Day-12/Bootstrap-Practice-question.html
@@ -10,6 +10,24 @@
 <body>
     <h1 class="text-center">Princing</h1>
     <p class="text-center">please checkout our most effective payment models</p>
+    <div class="row text-center justify-content-evenly">
+        <div class="card-sm-5 col-md-3 mb-3 me-3">
+            <div class="card-header">
+                <h4>Free</h4>
+            </div>
+            <div class="card-body">
+                <h1 class="card-title">$0 / mo</h1>
+                 <ul class="list-unstyled">
+                 <li>10 users included</li>
+                 <li>2 GB of storage</li>
+                <li>Email support</li>
+                </ul>
+                <button href="#" class="btn btn-outline-primary">Sign up for
+               free</button>
+            </div>
+        </div>
+        
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
