--- a/12-CSS-Day-12/Bootstrap-Practice-question.html
+++ b/12-CSS-Day-12/Bootstrap-Practice-question.html
@@ -40,7 +40,20 @@
             <button href="#" class="btn btn-primary">Get started</button>
             </div>
         </div>
-        
+        <div class="card col-sm-10 col-md-3 mb-3 me-3">
+            <div class="card-header">
+            <h4>Enterprise</h4>
+            </div>
+            <div class="card-body">
+            <h1 class="card-title">$29 / mo</h1>
+            <ul class="list-unstyled">
+            <li>30 users included</li>
+            <li>15 GB of storage</li>
+            <li>Phone & email support</li>
+            </ul>
+            <button href="#" class="btn btn-primary">Contact us</button>
+            </div>
+            </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
