--- a/13-CSS-Day-13(project)/index.html
+++ b/13-CSS-Day-13(project)/index.html
@@ -8,6 +8,11 @@
     <link rel="icon" href="./assets/logo.png">
 </head>
 <body>
+    <div class="main">
+        <div class="sidebar">sidebar</div>
+        <div class="content">main content</div>
+        <div class="musicPlayer">Music player</div>
+    </div>
     
 </body>
 </html>
