--- a/13-CSS-Day-13(project)/index.html
+++ b/13-CSS-Day-13(project)/index.html
@@ -14,8 +14,8 @@
 <body>
     <div class="main">
         <div class="sidebar">sidebar</div>
-        <div class="content">main content</div>
-        <div class="musicPlayer">Music player</div>
+        <div class="main-content">main content</div>
+        <div class="music-Player">Music player</div>
     </div>
     
 </body>
