--- a/13-CSS-Day-13(project)/index.html
+++ b/13-CSS-Day-13(project)/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div class="main">
-        <div class="sidebar">sidebar</div>
+        <div class="side-bar">sidebar</div>
         <div class="main-content">main content</div>
         <div class="music-Player">Music player</div>
     </div>
