--- a/13-CSS-Day-13(project)/index.html
+++ b/13-CSS-Day-13(project)/index.html
@@ -24,7 +24,19 @@
                     <a href="#">Search</a>
                 </div>
             </div>
-            <div class="Library"></div>
+            <div class="Library">
+                <div class="options">
+                    <div class="lib-option">
+                        <img src="/assets/library_icon.png">
+                        <a href="#">Your Library</a>
+                    </div>
+                    <div class="icons">
+                        <i class="fa-solid fa-plus"></i>
+                        <i class="fa-solid fa-arrow-right"></i>
+
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="main-content">main content</div>
         <div class="music-Player">Music player</div>
