--- a/13-CSS-Day-13(project)/index.html
+++ b/13-CSS-Day-13(project)/index.html
@@ -26,14 +26,13 @@
             </div>
             <div class="Library">
                 <div class="options">
-                    <div class="lib-option">
+                    <div class="lib-option nav-option" >
                         <img src="/assets/library_icon.png">
                         <a href="#">Your Library</a>
                     </div>
                     <div class="icons">
                         <i class="fa-solid fa-plus"></i>
                         <i class="fa-solid fa-arrow-right"></i>
-
                     </div>
                 </div>
             </div>
