--- a/13-CSS-Day-13(project)/index.html
+++ b/13-CSS-Day-13(project)/index.html
@@ -42,8 +42,9 @@
                         <button class="badge">Create playlist</button>
                     </div>
                     <div class="box">
-                       <p>let's find </p>
-                        <button class="badge">Create playlist</button>
+                       <p class="box-p1">let's find some prodcasts to follow</p>
+                       <p class="box-p2">we'll keep you updated on new episodes</p>
+                        <button class="badge">Browse podcasts</button>
                     </div>
                 </div>
             </div>
