--- a/13-CSS-Day-13(project)/index.html
+++ b/13-CSS-Day-13(project)/index.html
@@ -53,7 +53,15 @@
                 </div>
             </div>
         </div>
-        <div class="main-content">main content</div>
+        <div class="main-content">
+            <div class="sticky-nav">
+                <img src="/assets/backward_icon.png">
+                <img src="/assets/forward_icon.png">
+                <button class="badge">Explore Premium</button>
+                <button class="badge"><i class="fa-regular fa-circle-down"></i> Install App</button>
+            </div>
+            <div class="cards"></div>
+        </div>
         <div class="music-Player">Music player</div>
     </div>
     
