--- a/13-CSS-Day-13(project)/index.html
+++ b/13-CSS-Day-13(project)/index.html
@@ -55,11 +55,16 @@
         </div>
         <div class="main-content">
             <div class="sticky-nav">
-                <img src="/assets/backward_icon.png">
-                <img src="/assets/forward_icon.png">
-                <button class="badge">Explore Premium</button>
-                <button class="badge"><i class="fa-regular fa-circle-down"></i> Install App</button>
-                <i class="fa-regular fa-user"></i>
+                <div class="sticky-nav-icons">
+                    <img src="/assets/backward_icon.png">
+                    <img src="/assets/forward_icon.png">
+                </div>
+               <div class="sticky-nav-options">
+                <button class="badge nav-item">Explore Premium</button>
+                <button class="badge nav-item "><i class="fa-regular fa-circle-down"></i> Install App</button>
+                <i class="fa-regular fa-user nav-item"></i>
+               </div>
+              
             </div>
             <div class="cards"></div>
         </div>
