--- a/13-CSS-Day-13(project)/index.html
+++ b/13-CSS-Day-13(project)/index.html
@@ -64,9 +64,17 @@
                 <button class="badge nav-item dark-badge"><i class="fa-regular fa-circle-down" style="margin-right:5px ;"></i> Install App</button>
                 <i class="fa-regular fa-user nav-item"></i>
                </div>
-              
             </div>
-            <div class="cards"></div>
+            <div class="cards">
+                <h2>Recently played</h2>
+                <div class="cards-container">
+                    <div class="card">
+                        <img src="/assets/card1img.jpeg" class="card-img">
+                        <p class="card-title">Top 50 - Globel</p>
+                        <p class="card-info">Your daily updates of the mot played tracks </p>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="music-Player">Music player</div>
     </div>
