--- a/13-CSS-Day-13(project)/index.html
+++ b/13-CSS-Day-13(project)/index.html
@@ -66,12 +66,15 @@
                </div>
             </div>
             <div class="cards">
-                <h2>Recently played</h2>
+                <h2 style="background-color: #121212;">Recently played</h2>
                 <div class="cards-container">
                     <div class="card">
                         <img src="/assets/card1img.jpeg" class="card-img">
+                        <br>
+                        <br>
                         <p class="card-title">Top 50 - Globel</p>
-                        <p class="card-info">Your daily updates of the mot played tracks </p>
+                        <br>
+                        <p class="card-info">Your daily updates of the mot played tracks... </p>
                     </div>
                 </div>
             </div>
