--- a/13-CSS-Day-13(project)/index.html
+++ b/13-CSS-Day-13(project)/index.html
@@ -65,7 +65,7 @@
                 <i class="fa-regular fa-user nav-item"></i>
                </div>
             </div>
-            <div class="cards">
+           
                 <h2 style="background-color: #121212;">Recently played</h2>
                 <div class="cards-container">
                     <div class="card">
@@ -77,7 +77,88 @@
                         <p class="card-info">Your daily updates of the mot played tracks... </p>
                     </div>
                 </div>
-            </div>
+
+                <h2 style="background-color: #121212;">Trending now near you</h2>
+                <div class="cards-container">
+                    <div class="card">
+                        <img src="/assets/card2img.jpeg" class="card-img">
+                        <br>
+                        <br>
+                        <p class="card-title">Top 50 - Globel</p>
+                        <br>
+                        <p class="card-info">Your daily updates of the mot played tracks... </p>
+                    </div>
+                    <div class="card">
+                        <img src="/assets/card3img.jpeg" class="card-img">
+                        <br>
+                        <br>
+                        <p class="card-title">Top 50 - Globel</p>
+                        <br>
+                        <p class="card-info">Your daily updates of the mot played tracks... </p>
+                    </div>
+                    <div class="card">
+                        <img src="/assets/card4img.jpeg" class="card-img">
+                        <br>
+                        <br>
+                        <p class="card-title">Top 50 - Globel</p>
+                        <br>
+                        <p class="card-info">Your daily updates of the mot played tracks... </p>
+                    </div>
+                    <div class="card">
+                        <img src="/assets/card2img.jpeg" class="card-img">
+                        <br>
+                        <br>
+                        <p class="card-title">Top 50 - Globel</p>
+                        <br>
+                        <p class="card-info">Your daily updates of the mot played tracks... </p>
+                    </div>
+                    <div class="card">
+                        <img src="/assets/card4img.jpeg" class="card-img">
+                        <br>
+                        <br>
+                        <p class="card-title">Top 50 - Globel</p>
+                        <br>
+                        <p class="card-info">Your daily updates of the mot played tracks... </p>
+                    </div>
+                    <div class="card">
+                        <img src="/assets/card3img.jpeg" class="card-img">
+                        <br>
+                        <br>
+                        <p class="card-title">Top 50 - Globel</p>
+                        <br>
+                        <p class="card-info">Your daily updates of the mot played tracks... </p>
+                    </div>
+                </div>
+
+                <h2 style="background-color: #121212;">Featured charts</h2>
+                <div class="cards-container">
+                    <div class="card">
+                        <img src="/assets/card5img.jpeg" class="card-img">
+                        <br>
+                        <br>
+                        <p class="card-title">Top 50 - Globel</p>
+                        <br>
+                        <p class="card-info">Your daily updates of the mot played tracks... </p>
+                    </div>
+                    <div class="card">
+                        <img src="/assets/card6img.jpeg" class="card-img">
+                        <br>
+                        <br>
+                        <p class="card-title">Top 50 - Globel</p>
+                        <br>
+                        <p class="card-info">Your daily updates of the mot played tracks... </p>
+                    </div>
+                    <div class="card">
+                        <img src="/assets/card1img.jpeg" class="card-img">
+                        <br>
+                        <br>
+                        <p class="card-title">Top 50 - Globel</p>
+                        <br>
+                        <p class="card-info">Your daily updates of the mot played tracks... </p>
+                    </div>
+                </div>
+
+                <br><br><br><br><br><br>
         </div>
         <div class="music-Player">Music player</div>
     </div>
