--- a/13-CSS-Day-13(project)/index.html
+++ b/13-CSS-Day-13(project)/index.html
@@ -157,8 +157,9 @@
                         <p class="card-info">Your daily updates of the mot played tracks... </p>
                     </div>
                 </div>
-
-                <br><br><br><br><br><br>
+                <div class="footer">
+                    <div class="line"></div>
+                </div>                
         </div>
         <div class="music-Player">Music player</div>
     </div>
