--- a/13-CSS-Day-13(project)/index.html
+++ b/13-CSS-Day-13(project)/index.html
@@ -161,7 +161,24 @@
                     <div class="line"></div>
                 </div>                
         </div>
-        <div class="music-Player">Music player</div>
+        <div class="music-Player">
+            <div class="album"></div>
+            <div class="player">
+                <div class="player-controls">
+                    <img src="/assets/player_icon1.png" class="player-control-icon">
+                    <img src="/assets/player_icon2.png" class="player-control-icon">
+                    <img src="/assets/player_icon3.png" class="player-control-icon">
+                    <img src="/assets/player_icon4.png" class="player-control-icon">
+                    <img src="/assets/player_icon5.png" class="player-control-icon">
+                </div>
+                <div class="playback-bar">
+                    <span class="current-time">00:00</span>
+                    <input type="range" min="0" max="100" class="progress-bar">
+                    <span class="tot-time">3:33</span>
+                </div>
+            </div>
+            <div class="controls"></div>
+        </div>
     </div>
     
 </body>
