--- a/13-CSS-Day-13(project)/index.html
+++ b/13-CSS-Day-13(project)/index.html
@@ -177,7 +177,16 @@
                     <span class="tot-time">3:33</span>
                 </div>
             </div>
-            <div class="controls"></div>
+            <div class="controls">
+                <div class="controls-player">
+                    <i class="fa-regular fa-circle-play"></i>
+                    <i class="fa-solid fa-microphone"></i>
+                    <i class="fa-solid fa-bars"></i>
+                    <i class="fa-solid fa-file-audio"></i>
+                    <i class="fa-solid fa-volume-high"></i>
+                    <input type="range" min="0" max="100" class="progress-bar1">
+                </div>
+            </div>
         </div>
     </div>
     
