--- a/13-CSS-Day-13(project)/index.html
+++ b/13-CSS-Day-13(project)/index.html
@@ -162,7 +162,16 @@
                 </div>                
         </div>
         <div class="music-Player">
-            <div class="album"></div>
+            <div class="album">
+                <div class="album-player">
+                    <img src="/assets/card3img.jpeg" class="album-img">
+                  <div class="title-player">
+                    <p class="love">One Love</p>
+                    <p class="shubh">shubh</p>
+                  </div>
+                    <i class="fa-solid fa-circle-plus title1"></i>
+                </div>
+            </div>
             <div class="player">
                 <div class="player-controls">
                     <img src="/assets/player_icon1.png" class="player-control-icon">
