--- a/13-CSS-Day-13(project)/index.html
+++ b/13-CSS-Day-13(project)/index.html
@@ -188,11 +188,11 @@
             </div>
             <div class="controls">
                 <div class="controls-player">
-                    <i class="fa-regular fa-circle-play"></i>
-                    <i class="fa-solid fa-microphone"></i>
-                    <i class="fa-solid fa-bars"></i>
-                    <i class="fa-solid fa-file-audio"></i>
-                    <i class="fa-solid fa-volume-high"></i>
+                    <i class="fa-regular fa-circle-play controls-icon"></i>
+                    <i class="fa-solid fa-microphone controls-icon"></i>
+                    <i class="fa-solid fa-bars controls-icon"></i>
+                    <i class="fa-solid fa-file-audio controls-icon"></i>
+                    <i class="fa-solid fa-volume-high controls-icon"></i>
                     <input type="range" min="0" max="100" class="progress-bar1">
                 </div>
             </div>
