--- a/15-Javascript-Day-15/index.html
+++ b/15-Javascript-Day-15/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Javascript concepts </title>
+    <script src="app.js"></script>
 </head>
 <body>
-    <p> this is first program</p>
+    <h1>Hello javascript!</h1>
     
 </body>
 </html>
