--- a/15-Javascript-Day-15/index.html
+++ b/15-Javascript-Day-15/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Hello javascript!</h1>
-    <script src="app.js"></script>
+    <script src="app1.js"></script>
 </body>
 </html>
