--- a/15-Javascript-Day-15/index1.html
+++ b/15-Javascript-Day-15/index1.html
@@ -6,6 +6,6 @@
     <title>javascript file</title>
 </head>
 <body>
-    <script src="nested_if_else.js"></script>
+    <script src="alert_&_prompt.js"></script>
 </body>
 </html>
