--- a/16-javascript-Day-16/index.html
+++ b/16-javascript-Day-16/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="Trim.js"></script>
+    <script src="upper-lower-case.js"></script>
 </body>
 </html>
