--- a/17-javascript-Day-17/index.html
+++ b/17-javascript-Day-17/index.html
@@ -6,6 +6,6 @@
     <title>Loops</title>
 </head>
 <body>
-    <script src="Nested_loop.js"></script>
+    <script src="Loops_with_array.js"></script>
 </body>
 </html>
