--- a/18-javascript-Day-18/index.html
+++ b/18-javascript-Day-18/index.html
@@ -6,6 +6,6 @@
     <title>object literals</title>
 </head>
 <body>
-    <script src="object_literals.js"></script>
+    <script src="object_literals2.js"></script>
 </body>
 </html>
