--- a/19-javascript-Day-19/index.html
+++ b/19-javascript-Day-19/index.html
@@ -6,6 +6,6 @@
     <title>Function</title>
 </head>
 <body>
-    <script src="return.js"></script>
+    <script src="scope.js"></script>
 </body>
 </html>
