--- a/20-javascript-Day-20/index.html
+++ b/20-javascript-Day-20/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="try_and_catch.js"></script>
+    <script src="practice_question.js"></script>
 </body>
 </html>
