--- a/21-javascript-Day-21/index.html
+++ b/21-javascript-Day-21/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="array_methods.js"></script>
+    <script src="map.js"></script>
 </body>
 </html>
