--- a/21-javascript-Day-21/index.html
+++ b/21-javascript-Day-21/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="practice_01_question.js"></script>
+    <script src="Spread.js"></script>
 </body>
 </html>
