--- a/23-javascript-Day-23/index.html
+++ b/23-javascript-Day-23/index.html
@@ -7,7 +7,10 @@
     <link  rel="stylesheet" href="style.css">
 </head>
 <body>
-    <button onclick="console.log('photo was liked'); console.log('comments was like')">click me</button>
+    <button>click me!</button>
+    <button>click me 1!</button>
+    <button>click me 2!</button>
+    <button>click me 2!</button>
     <script src="app.js"></script>
 </body>
 </html>
