--- a/24-javascript-Day-24/Event_bubbling.html
+++ b/24-javascript-Day-24/Event_bubbling.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="Style.css">
 </head>
 <body>
-    
+    <div>
+        <ul>
+            <li>one</li>
+            <li>two</li>
+            <li>three</li>
+        </ul>
+    </div>
+    <script src="bubbling.js"></script>
 </body>
 </html>
