--- a/24-javascript-Day-24/Activity.html
+++ b/24-javascript-Day-24/Activity.html
@@ -10,8 +10,8 @@
     <input placeholder="enter your task">
     <button>Add Task</button>
     <ul>
-        <li>Eat<button class="delete">delte</button></li>
-        <li>Sleep <button class="delete">delte</button></li>
+        <li>Eat<button class="delete">delete</button></li>
+        <li>Sleep <button class="delete">delete</button></li>
     </ul>
     <script src="activity.js"></script>
 </body>
