--- a/24-javascript-Day-24/simon_Game.html
+++ b/24-javascript-Day-24/simon_Game.html
@@ -10,10 +10,14 @@
     <h1>Simon Game</h1>
     <h3>press any key to start the game</h3>
     <div class="btn-container">
-        <div class="btn">1</div>
-        <div class="btn">2</div>
-        <div class="btn">3</div>
-        <div class="btn">4</div>
+       <div class="line-one">
+        <div class="btn red" type="button">1</div>
+        <div class="btn yellow" type="button">2</div>
+       </div>
+        <div class="line-two">
+         <div class="btn green"type="button">3</div>
+        <div class="btn purple"type="button">4</div>
+        </div>
     </div>
     <script src="simon_game.js"></script>
 </body>
