--- a/25-javascript-Day-25/index.html
+++ b/25-javascript-Day-25/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="promises.js"></script>
+    <script src="then_and_catch.js"></script>
 </body>
 </html>
