--- a/25-javascript-Day-25/index.html
+++ b/25-javascript-Day-25/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="then_and_catch.js"></script>
+    <h1>Hello world !</h1>
+    <script src="callback_hall.js"></script>
 </body>
 </html>
