--- a/25-javascript-Day-25/index.html
+++ b/25-javascript-Day-25/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Hello world !</h1>
-    <script src="App.js"></script>
+    <script src="callback_hall.js"></script>
 </body>
 </html>
