--- a/26-javascript-Day-26/index.html
+++ b/26-javascript-Day-26/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="Style.css">
 </head>
 <body>
-    <script src="app.js"></script>
+    <h1>hello world</h1>
+    <script src="Async.js"></script>
 </body>
 </html>
