--- a/26-javascript-Day-26/index.html
+++ b/26-javascript-Day-26/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>hello world</h1>
-    <script src="Async.js"></script>
+    <script src="await.js"></script>
 </body>
 </html>
