--- a/27-javascript-Day-27/index.html
+++ b/27-javascript-Day-27/index.html
@@ -7,6 +7,9 @@
     <link href="Style.css" rel="stylesheet">
 </head>
 <body>
+    <h1>Get random cat facts</h1>
+    <button type="button">show new facts</button>
+    <p id="result"></p>
     <script src="https://cdn.jsdelivr.net/npm/axios@1.6.7/dist/axios.min.js"></script>
     <script src="App.js"></script>
 </body>
