--- a/27-javascript-Day-27/index.html
+++ b/27-javascript-Day-27/index.html
@@ -7,10 +7,10 @@
     <link href="Style.css" rel="stylesheet">
 </head>
 <body>
-    <h1>Get random dog image</h1>
-    <button type="button">show</button>
-    <image id="result">
+    <input placeholder="Enter country">
+    <button>search</button>
+    <ul id="list"></ul>
     <script src="https://cdn.jsdelivr.net/npm/axios@1.6.7/dist/axios.min.js"></script>
-    <script src="Get_image.js"></script>
+    <script src="Axios.js"></script>
 </body>
 </html>
