--- a/04-HTML-Day-04/Text-area.html
+++ b/04-HTML-Day-04/Text-area.html
@@ -8,7 +8,7 @@
 <body>
     <form>
         <div>
-            <label for="textarea">writw your feedback</label>
+            <label for="textarea">write your feedback</label>
             <textarea name="comments" id="textarea" placeholder="write your feedback" rows="6"></textarea>
         </div>
     </form>
