--- a/04-HTML-Day-04/label.html
+++ b/04-HTML-Day-04/label.html
@@ -15,8 +15,10 @@
     </div>
    
 
-   <div> <label for="password">Enter your password</label>
-    <input type="password" id="password"></div>
+   <div> 
+    <label for="password">Enter your password</label>
+    <input type="password" id="password">
+   </div>
 
     <div>
         <label for="age">Enter age</label>
